--- a/enhance-readme/action.yml
+++ b/enhance-readme/action.yml
@@ -44,6 +44,10 @@ inputs:
     description: 'A path prefix to prepend to all relative links. Useful when content is moved from a subdirectory.'
     required: false
     default: ''
+  original_repository:
+    description: 'The original/submodule repository in owner/repo format that is being enhanced (e.g., owner/repo).'
+    required: false
+    default: ''
 
 runs:
   using: 'docker'
@@ -58,3 +62,4 @@ runs:
     INPUT_DISABLE_BRANDING: ${{ inputs.disable_branding }}
     INPUT_SORT_BY: ${{ inputs.sort_by }}
     INPUT_RELATIVE_LINK_PREFIX: ${{ inputs.relative_link_prefix }}
+    INPUT_ORIGINAL_REPOSITORY: ${{ inputs.original_repository }}
