--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -140,7 +140,7 @@ jobs:
       - name: Test in Alpine container
         run: |
           docker run --rm -v $PWD:/workspace -w /workspace alpine:latest sh -c '
-            apk add --no-cache bash git curl github-cli
+            apk add --no-cache bash git curl github-cli jq
             curl -s https://bashunit.typeddevs.com/install.sh | bash
             ./lib/bashunit tests/
           '
